@@ -2291,6 +2291,7 @@ let load_macro ctx cpath f p =
 			com2.display <- false;
 			com2.dead_code_elimination <- false;
 			List.iter (fun p -> com2.defines <- PMap.remove (platform_name p) com2.defines) platforms;
+			com2.defines_signature <- None;
 			com2.class_path <- List.filter (fun s -> not (ExtString.String.exists s "/_std/")) com2.class_path;
 			com2.class_path <- List.map (fun p -> p ^ "neko" ^ "/_std/") com2.std_path @ com2.class_path;
 			com2.defines <- PMap.foldi (fun k _ acc ->
